--- a/index.html
+++ b/index.html
@@ -39,27 +39,12 @@
                     img {  display: block;}
     </style>
 
-    <style>
-      html {
-        font-family: Poppins;
-        font-size: 16px;
-      }
-
-      body {
-        font-weight: 400;
-        font-style:normal;
-        text-decoration: none;
-        text-transform: none;
-        letter-spacing: normal;
-        line-height: 1.55;
-        color: var(--dl-color-gray-black);
-        background-color: var(--dl-color-gray-white);
-
-      }
-    </style>
-
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./components/card-release-note.css" />
+    <link rel="stylesheet" href="./landing_page.css" />
+    <link rel="stylesheet" href="./components/card_gallery.css" />
+    <link rel="stylesheet" href="./components/card_release_note.css" />
+
+    <script src="./js/landing_page.js"></script> 
 
     <link
       rel="shortcut icon"
@@ -72,44 +57,25 @@
 
   <body>
     <div>
-      <link rel="stylesheet" href="./landing-page.css" />
 
       <div class="landing-page-container">
         <div class="landing-page-top-container">
-          <nav data-role="Header" class="landing-page-navbar">
-            <div class="landing-page-container-logo">
-              <img
-                alt="image"
-                src="./public/appicon60@2x.png"
-                class="landing-page-image"
-              />
+          <nav data-role="Header" id="headerNav" class="navbar">
+            <div class="container_logo">
+              <img class="logo_small" 
+                alt="The app's logo, a styalizes letter A on a green and baige background" 
+                src="./public/appicon60@2x.png" />
               <h1 style="color: var(--color_baige_light)">Arkham Bag</h1>
             </div>
-            <div class="landing-page-nav-menu">
-              <div class="landing-page-links-container">
-                <a href="#section_about" class="landing-page-link">About</a>
-                <a href="#section_releases" class="landing-page-link1">
-                  Release Notes
-                </a>
-                <a href="#section_legal" class="landing-page-link2">Legal</a>
-                <a href="#section_contact" class="landing-page-link3">
-                  Contact
-                </a>
-              </div>
+            <div class="nav_menu_container">
+              <a href="#section_about" class="nav_menu_item">About</a>
+              <a href="#section_releases" class="nav_menu_item">Release Notes</a>
+              <a href="#section_legal" class="nav_menu_item">Legal</a>
+              <a href="#section_contact" class="nav_menu_item">Contact</a>
             </div>
-            <div data-type="BurgerMenu" class="landing-page-burger-menu">
-              <svg viewBox="0 0 1024 1024" class="landing-page-burger-menu">
-                <path
-                  d="M810.667 725.333h-597.333c-47.061 0-85.333 38.272-85.333 85.333s38.272 85.333 85.333 85.333h597.333c47.061 0 85.333-38.272 85.333-85.333s-38.272-85.333-85.333-85.333z"
-                ></path>
-                <path
-                  d="M810.667 426.667h-597.333c-47.061 0-85.333 38.272-85.333 85.333s38.272 85.333 85.333 85.333h597.333c47.061 0 85.333-38.272 85.333-85.333s-38.272-85.333-85.333-85.333z"
-                ></path>
-                <path
-                  d="M810.667 128h-597.333c-47.061 0-85.333 38.272-85.333 85.333s38.272 85.333 85.333 85.333h597.333c47.061 0 85.333-38.272 85.333-85.333s-38.272-85.333-85.333-85.333z"
-                ></path>
-              </svg>
-            </div>
+            <button>
+              <img class="icon_burger" scr="/public/iconMenu.svg" alt="Hamburger menu icon"/>
+            </button>>
             <div data-type="MobileMenu" class="landing-page-mobile-menu">
               <div class="landing-page-nav">
                 <div class="landing-page-top">
@@ -133,14 +99,10 @@
                   </div>
                 </div>
                 <div class="landing-page-nav-menu1">
-                  <a href="#section_about" class="landing-page-link4">About</a>
-                  <a href="#section_releases" class="landing-page-link5">
-                    Release Notes
-                  </a>
-                  <a href="#section_legal" class="landing-page-link6">Legal</a>
-                  <a href="#section_contact" class="landing-page-link7">
-                    Contact
-                  </a>
+                  <a href="#section_about" class="nav_menu_item">About</a>
+                  <a href="#section_releases" class="nav_menu_item">Release Notes</a>
+                  <a href="#section_legal" class="nav_menu_item">Legal</a>
+                  <a href="#section_contact" class="nav_menu_item">Contact</a>
                 </div>
               </div>
             </div>
@@ -182,31 +144,25 @@
             </div>
             
             <div class="content_gallery">
-              <div
-                class="card-gallery-gallery-card card-gallery-root-class-name9"
-              >
+              <div class="card_gallery shadow_normal">
                 <img
-                  alt="image"
+                  alt="Screenshot showing the bag view with various tokens"
                   src="./public/appImage01BagScreen.jpg"
-                  class="card-gallery-image"
+                  class="card_gallery_image"
                 />
               </div>
-              <div
-                class="card-gallery-gallery-card card-gallery-root-class-name10"
-              >
+              <div class="card_gallery shadow_normal">
                 <img
-                  alt="image"
+                  alt="Screenshot showing the phase seqence and player window overlay"
                   src="./public/appImage02SequenceOverlay.jpg"
-                  class="card-gallery-image"
+                  class="card_gallery_image"
                 />
               </div>
-              <div
-                class="card-gallery-gallery-card card-gallery-root-class-name11"
-              >
+              <div class="card_gallery shadow_normal">
                 <img
-                  alt="image"
+                  alt="Screenshot showing the bag selection screen"
                   src="./public/appImage03BagsList.jpg"
-                  class="card-gallery-image"
+                  class="card_gallery_image"
                 />
               </div>
             </div>
@@ -217,13 +173,13 @@
 
               <div class="stretch_center">
                 <h2>Release Notes</h2>
-                <p class="label_description"> Here, you can find the latest releases and their content.</p>
+                <p class="label_description"> Here, you can find the latest feature releases and their content.</p>
               </div>
 
               <div class="content_release_notes">
 
-                <div class="card-release-note shadow_normal">
-                  <div class="card-release-note-header">
+                <div class="card_release_note shadow_normal">
+                  <div class="card_release_note_header">
                     <svg viewBox="0 0 1024 1024" class="icon">
                       <path
                       d="M809.003 291.328l-297.003 171.819-297.003-171.819 275.456-157.397c4.779-2.731 9.899-4.48 15.147-5.333 9.301-1.451 18.987 0.128 27.904 5.291zM491.776 979.669c6.016 3.243 12.928 5.077 20.224 5.077 7.381 0 14.336-1.877 20.395-5.163 15.189-2.475 29.909-7.68 43.392-15.36l298.709-170.709c26.368-15.232 45.269-38.315 55.424-64.597 5.675-14.592 8.619-30.165 8.747-46.251v-341.333c0-20.395-4.821-39.723-13.397-56.917-0.939-3.029-2.219-5.973-3.883-8.832-1.963-3.371-4.267-6.357-6.912-8.96-1.323-1.835-2.731-3.669-4.139-5.419-9.813-12.203-21.845-22.528-35.456-30.507l-299.051-170.88c-26.027-15.019-55.467-19.84-83.328-15.531-15.531 2.432-30.507 7.637-44.288 15.488l-298.709 170.709c-16.341 9.429-29.824 21.888-40.149 36.267-2.56 2.56-4.864 5.547-6.784 8.832-1.664 2.901-2.987 5.888-3.925 8.96-1.707 3.456-3.243 6.955-4.608 10.496-5.632 14.635-8.576 30.208-8.704 45.995v341.632c0.043 30.293 10.581 58.197 28.331 80.128 9.813 12.203 21.845 22.528 35.456 30.507l299.051 170.88c13.824 7.979 28.587 13.099 43.605 15.445zM469.333 537.045v340.949l-277.12-158.336c-4.736-2.773-8.832-6.315-12.16-10.411-5.931-7.381-9.387-16.512-9.387-26.581v-318.379zM554.667 877.995v-340.949l298.667-172.757v318.379c-0.043 5.163-1.067 10.496-2.987 15.445-3.413 8.789-9.6 16.384-18.176 21.333z"
@@ -240,8 +196,8 @@
                   </p>
                 </div>
 
-                <div class="card-release-note shadow_normal">
-                  <div class="card-release-note-header">
+                <div class="card_release_note shadow_normal">
+                  <div class="card_release_note_header">
                     <svg viewBox="0 0 1024 1024" class="icon">
                       <path
                       d="M809.003 291.328l-297.003 171.819-297.003-171.819 275.456-157.397c4.779-2.731 9.899-4.48 15.147-5.333 9.301-1.451 18.987 0.128 27.904 5.291zM491.776 979.669c6.016 3.243 12.928 5.077 20.224 5.077 7.381 0 14.336-1.877 20.395-5.163 15.189-2.475 29.909-7.68 43.392-15.36l298.709-170.709c26.368-15.232 45.269-38.315 55.424-64.597 5.675-14.592 8.619-30.165 8.747-46.251v-341.333c0-20.395-4.821-39.723-13.397-56.917-0.939-3.029-2.219-5.973-3.883-8.832-1.963-3.371-4.267-6.357-6.912-8.96-1.323-1.835-2.731-3.669-4.139-5.419-9.813-12.203-21.845-22.528-35.456-30.507l-299.051-170.88c-26.027-15.019-55.467-19.84-83.328-15.531-15.531 2.432-30.507 7.637-44.288 15.488l-298.709 170.709c-16.341 9.429-29.824 21.888-40.149 36.267-2.56 2.56-4.864 5.547-6.784 8.832-1.664 2.901-2.987 5.888-3.925 8.96-1.707 3.456-3.243 6.955-4.608 10.496-5.632 14.635-8.576 30.208-8.704 45.995v341.632c0.043 30.293 10.581 58.197 28.331 80.128 9.813 12.203 21.845 22.528 35.456 30.507l299.051 170.88c13.824 7.979 28.587 13.099 43.605 15.445zM469.333 537.045v340.949l-277.12-158.336c-4.736-2.773-8.832-6.315-12.16-10.411-5.931-7.381-9.387-16.512-9.387-26.581v-318.379zM554.667 877.995v-340.949l298.667-172.757v318.379c-0.043 5.163-1.067 10.496-2.987 15.445-3.413 8.789-9.6 16.384-18.176 21.333z"
@@ -257,8 +213,8 @@
                   </p>
                 </div>
 
-                <div class="card-release-note shadow_normal">
-                  <div class="card-release-note-header">
+                <div class="card_release_note shadow_normal">
+                  <div class="card_release_note_header">
                     <svg viewBox="0 0 1024 1024" class="icon">
                       <path
                       d="M809.003 291.328l-297.003 171.819-297.003-171.819 275.456-157.397c4.779-2.731 9.899-4.48 15.147-5.333 9.301-1.451 18.987 0.128 27.904 5.291zM491.776 979.669c6.016 3.243 12.928 5.077 20.224 5.077 7.381 0 14.336-1.877 20.395-5.163 15.189-2.475 29.909-7.68 43.392-15.36l298.709-170.709c26.368-15.232 45.269-38.315 55.424-64.597 5.675-14.592 8.619-30.165 8.747-46.251v-341.333c0-20.395-4.821-39.723-13.397-56.917-0.939-3.029-2.219-5.973-3.883-8.832-1.963-3.371-4.267-6.357-6.912-8.96-1.323-1.835-2.731-3.669-4.139-5.419-9.813-12.203-21.845-22.528-35.456-30.507l-299.051-170.88c-26.027-15.019-55.467-19.84-83.328-15.531-15.531 2.432-30.507 7.637-44.288 15.488l-298.709 170.709c-16.341 9.429-29.824 21.888-40.149 36.267-2.56 2.56-4.864 5.547-6.784 8.832-1.664 2.901-2.987 5.888-3.925 8.96-1.707 3.456-3.243 6.955-4.608 10.496-5.632 14.635-8.576 30.208-8.704 45.995v341.632c0.043 30.293 10.581 58.197 28.331 80.128 9.813 12.203 21.845 22.528 35.456 30.507l299.051 170.88c13.824 7.979 28.587 13.099 43.605 15.445zM469.333 537.045v340.949l-277.12-158.336c-4.736-2.773-8.832-6.315-12.16-10.411-5.931-7.381-9.387-16.512-9.387-26.581v-318.379zM554.667 877.995v-340.949l298.667-172.757v318.379c-0.043 5.163-1.067 10.496-2.987 15.445-3.413 8.789-9.6 16.384-18.176 21.333z"
@@ -362,6 +318,5 @@
         </div>
       </div>
     </div>
-    <script src="https://unpkg.com/@teleporthq/teleport-custom-scripts"></script>
   </body>
 </html>
