--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a href="#section_contact" class="nav_item">Contact</a>
           </div>
 
-          <button id="btnMenu" onclick="openMobileNav()" style="min-width: var(--padding_large);"></button>
+          <button id="btnMenu" onclick="openMobileNav()"></button>
         </div>
 
       </div>
@@ -62,7 +62,7 @@
             <h1>Arkham Bag</h1>
           </div>
 
-          <button id="btnClose" onclick="closeMobileNav()" style="min-width: var(--padding_large);"></button>
+          <button id="btnClose" onclick="closeMobileNav()"></button>
         </div>
 
         <a href="#section_about" onclick="closeMobileNav()" class="mobile_item divider_row">About</a>
@@ -337,7 +337,7 @@
                 <p>Your email address</p>
               </div>
               <input
-                type="text"
+                type="email"
                 required
                 placeholder="henry.armitage@miscatonic.edu"
                 class="input_field"
