--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
             <div
               class="h-captcha"
               data-sitekey="e37373a0-ea5d-45a9-8d86-2111dd629edc"
+              data-callback="correctCaptcha"
               data-error-callback="onError">
             </div>
 
