--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                   <p class="p_end">The materials within Arkham Bag are provided on an 'as is' basis. We make no warranties, expressed or implied, and hereby disclaim and negate all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</p>
 
                   <h3>Limitations</h3>
-                  <p>In no event shall Gergely Kovacs or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use Arkham Bag, even if we or a representative authorized by us has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
+                  <p class="p_end">In no event shall Gergely Kovacs or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use Arkham Bag, even if we or a representative authorized by us has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
                   <p class="p_end">Arkham Bag may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
 
                   <h3>Modifications</h3>
@@ -257,14 +257,14 @@
                 <div class="flex_column content_collapsible">
                   <p class="p_end">Last updated May 4th, 2022.</p>
 
-                  <p>Kovacs (we, us, our) has built the Arkham Bag app (service) as a free service. The SERVICE is provided by us at no cost and is intended for use as is.</p>
-                  <p>This section is to inform you regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
-                  <p>If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
+                  <p class="p_end">Kovacs (we, us, our) has built the Arkham Bag app (service) as a free service. The SERVICE is provided by us at no cost and is intended for use as is.</p>
+                  <p class="p_end">This section is to inform you regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.</p>
+                  <p class="p_end">If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
                   <p class="p_end">The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible on this website unless otherwise defined in this Privacy Policy.</p>
 
                   <h3>Information Collection and Use</h3>
-                  <p>We do not collect any information which identifies or allows us to identify you, unless you voluntarily provide us with such data (for example, when contacting us or leaving feedback). In particular, we do not collect your name, e-mail, telephone number, or any persistent online identifiers.</p>
-                  <p>The app, however, does use third party services that may collect information that can be used to identify you.</p>
+                  <p class="p_end">We do not collect any information which identifies or allows us to identify you, unless you voluntarily provide us with such data (for example, when contacting us or leaving feedback). In particular, we do not collect your name, e-mail, telephone number, or any persistent online identifiers.</p>
+                  <p class="p_end">The app, however, does use third party services that may collect information that can be used to identify you.</p>
                   <p>Link to privacy policy of third party service providers used by the app.</p>
                   <ul class="p_end">
                     <li>Ironsource Ltd.</li>
@@ -274,7 +274,7 @@
                   <p class="p_end">We want to inform you that whenever you use our Service, in the case of an error in the app, we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</p>
 
                   <h3>Cookies</h3>
-                  <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.</p>
+                  <p class="p_end">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.</p>
                   <p class="p_end">This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</p>
 
                   <h3>Service Providers</h3>
