--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <img class="icon_large"
                   alt="The app's logo, a styalizes letter 'A' on a green and baige background" 
                   src="./public/appIcon2017.png" />
-                <h3>Version 1.1 - 2019</h3>
+                <h3>Version 1.1 - 2017</h3>
               </div>
               <p>
                 + Added the missing Elder Thing token (Cthulhu still remains for fun)<br>
@@ -186,7 +186,7 @@
                 <img class="icon_large"
                   alt="The app's logo, a styalizes letter 'A' on a green and baige background" 
                   src="./public/appIcon2017.png" />
-                <h3>Version 1.0 - 2017</h3>
+                <h3>Version 1.0 - 2016</h3>
               </div>
               <p>
                 Arkham Bag is an event simulator for role playing and board games. 
@@ -379,7 +379,7 @@
               class="h-captcha"
               data-sitekey="e37373a0-ea5d-45a9-8d86-2111dd629edc"
               data-callback="correctCaptcha"
-              data-error-callback="onError">
+              data-error-callback="captchaError">
             </div>
 
             <button 
