--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
           </div>
 
           <div class="nav_menu flex_row">
-            <a href="#section_about" class="nav_item">About</a>
-            <a href="#section_releases" class="nav_item">Release Notes</a>
-            <a href="#section_legal" class="nav_item">Legal</a>
-            <a href="#section_contact" class="nav_item">Contact</a>
+            <a href="#about" class="nav_item">About</a>
+            <a href="#releases" class="nav_item">Release Notes</a>
+            <a href="#legal" class="nav_item">Legal</a>
+            <a href="#contact" class="nav_item">Contact</a>
           </div>
 
           <button id="btnMenu" onclick="openMobileNav()"></button>
@@ -67,10 +67,10 @@
           <button id="btnClose" onclick="closeMobileNav()"></button>
         </div>
 
-        <a href="#section_about" onclick="closeMobileNav()" class="mobile_item divider_row">About</a>
-        <a href="#section_releases" onclick="closeMobileNav()" class="mobile_item divider_row">Release Notes</a>
-        <a href="#section_legal" onclick="closeMobileNav()" class="mobile_item divider_row">Legal</a>
-        <a href="#section_contact" onclick="closeMobileNav()" class="mobile_item">Contact</a>
+        <a href="#about" onclick="closeMobileNav()" class="mobile_item divider_row">About</a>
+        <a href="#releases" onclick="closeMobileNav()" class="mobile_item divider_row">Release Notes</a>
+        <a href="#legal" onclick="closeMobileNav()" class="mobile_item divider_row">Legal</a>
+        <a href="#contact" onclick="closeMobileNav()" class="mobile_item">Contact</a>
 
       </div>
 
@@ -96,7 +96,7 @@
       </div>
 
       <!----- ----- About section starts ----- ----->
-      <div id="section_about" class="container_stretched light flex_column">
+      <div id="about" class="container_stretched light flex_column">
         <div class="container_middle flex_column">
 
           <div class="flex_column" style="gap: var(--padding_small)">
@@ -140,7 +140,7 @@
       </div>
 
       <!----- ----- Release notes start ----- ----->
-      <div id="section_releases" class="container_stretched dark flex_column">
+      <div id="releases" class="container_stretched dark flex_column">
         <div class="container_middle flex_column">
 
           <div class="flex_column" style="gap: var(--padding_small)">
@@ -201,7 +201,7 @@
       </div>
 
       <!----- ----- Legal section start ----- ----->
-      <div id="section_legal" class="container_stretched light flex_column">
+      <div id="legal" class="container_stretched light flex_column">
         <div class="container_middle flex_column">
 
           <div class="flex_column" style="gap: var(--padding_small)">
@@ -310,7 +310,7 @@
       </div>
 
       <!----- ----- Contact section start ----- ----->
-      <div id="section_contact" class="container_stretched dark flex_column">
+      <div id="contact" class="container_stretched dark flex_column">
         <div class="container_middle flex_column">
 
           <div class="flex_column" style="gap: var(--padding_small)">
