--- a/index.html
+++ b/index.html
@@ -155,7 +155,22 @@
                 <img class="icon_large"
                   alt="The app's logo, a styalizes letter 'A' on a green and baige background" 
                   src="./public/appIcon2022.png" />
-                <h3>Version 2.0 - Coming in May, 2022!</h3>
+                <h3>Version 2.1 - May, 2022!</h3>
+              </div>
+              <p>
+                + Proper iPad support with landscape orientation and UI enhancements<br>
+                + Player Aid (left swipe from the edge on the bag screen) now includes keywords as well<br>
+                + Shiny new app icon<br>
+                + Minor "under the hood" enhancements
+              </p>
+            </div>
+
+            <div class="card_release_note flex_column shadow_normal">
+              <div class="container_middle flex_row" style="gap: var(--padding_small)">
+                <img class="icon_large"
+                  alt="The app's logo, a styalizes letter 'A' on a green and baige background" 
+                  src="./public/appIcon2022.png" />
+                <h3>Version 2.0 - May, 2022!</h3>
               </div>
               <p>
                 + Completely reworked user interface<br>
