--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
               <div class="container_middle flex_row" style="gap: var(--padding_small)">
                 <img class="icon_large"
                   alt="The app's logo, a styalizes letter 'A' on a green and baige background" 
-                  src="./public/appIcon2022.png" />
-                <h3>Version 2.1 - May, 2022!</h3>
+                  src="./public/appIcon2022_2.png" />
+                <h3>Version 2.1 - May, 2022</h3>
               </div>
               <p>
                 + Proper iPad support with landscape orientation and UI enhancements<br>
@@ -169,8 +169,8 @@
               <div class="container_middle flex_row" style="gap: var(--padding_small)">
                 <img class="icon_large"
                   alt="The app's logo, a styalizes letter 'A' on a green and baige background" 
-                  src="./public/appIcon2022.png" />
-                <h3>Version 2.0 - May, 2022!</h3>
+                  src="./public/appIcon2022_1.png" />
+                <h3>Version 2.0 - May, 2022</h3>
               </div>
               <p>
                 + Completely reworked user interface<br>
