--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="#home">
               <img class="icon_large"
                 alt="The app's logo, a styalizes letter 'A' on a green and baige background" 
-                src="./public/appIcon2022.png" />
+                src="./public/appIcon2022_2.png" />
             </a>
             <h1>Arkham Bag</h1>
           </div>
@@ -59,7 +59,7 @@
             <a href="#home" onclick="closeMobileNav()">
               <img class="icon_large"
                 alt="The app's logo, a styalizes letter 'A' on a green and baige background" 
-                src="./public/appIcon2022.png" />
+                src="./public/appIcon2022_2.png" />
             </a>
             <h1>Arkham Bag</h1>
           </div>
