Quick Fix and Copyright 2023
Fixed the incorrect icon in the footer icon and changed the copyright text to reflect the correct year, 2023.

--- a/index.html
+++ b/index.html
@@ -419,11 +419,11 @@
           <div class="flex_row" style="gap: 5px">
             <img class="icon_small"
               alt="The app's logo, a styalizes letter 'A' on a green and baige background" 
-              src="./public/appIcon2022.png" />
+              src="./public/appIcon2022_2.png" />
             <h4 class="text_footer">Arkham Bag</h4>
           </div>
             
-          <p style="color: white; font-size: 14px;">Copyright © 2022, Gergely E. Kovacs</p>
+          <p style="color: white; font-size: 14px;">Copyright © 2023, Gergely E. Kovacs</p>
 
           <form action="https://www.paypal.com/donate" method="post" target="_top">
             <input type="hidden" name="hosted_button_id" value="8AUGMNEMT3R7Q" />
