--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
               Arkham Bag is a chaos bag simulator for Arkham Horror: The Card
               Game, based on H. P. Lovecraft&apos;s Cthulhu mythos. The app
               provides a quick and easy way to simulate the game&apos;s chaos
-              bag, supporting game mechanics all the way to the Edge of the
-              Earth campaign. Arkham Bag also contains quick access to player
-              aid in the form of phase sequences with player windows.</p>
+              bag, supporting game mechanics all the way to the Scarlet Keys
+              campaign. Arkham Bag also contains quick access to player aid
+              in the form of phase sequences with player windows and all the
+              available keywords.</p>
           </div>
           
           <div class="content_gallery flex_grid">
